src/test/deca/syntax/valid/AvecObjet/EmptyMethod.deca
//Description
//  test d'une méthode vide
//Résultat
//  ok
class A {
    int x;
    void getX() {
        
    }
}